4717864: setFont() does not update Fonts of Menus already on screen

Reviewed-by: art, bagiras